# chrome-guard

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  malicious_extension.md
.github/workflows/: ci.yml  keep-alive.yml  release.yml  update-signatures.yml
data/: dangerous_permissions.yaml  signatures.json  whitelist.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md  INSTALLATION.md  USAGE.md
scripts/: install.sh  publish_github.zsh  report.csv  report.json  run_checks.zsh  setup_with_pyenv.zsh  update_signatures.py
src/chromeguard/: __init__.py  cli.py
src/chromeguard/extractors/: brave.py  chrome.py  edge.py
src/chromeguard/reporters/: csv_export.py  json_output.py  terminal_ui.py
src/chromeguard/scanners/: behavior_monitor.py  manifest_analyzer.py  signature_matcher.py
src/chromeguard/utils/: crypto.py  logger.py
tests/: test_cli.py  test_manifest_analyzer.py  test_signature_matcher.py
tests/fixtures/: malicious_manifest.json  safe_manifest.json
